apps/kafdrop/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: kafdrop
  namespace: kafdrop
  labels:
    app.kubernetes.io/component: kafdrop
    app.kubernetes.io/name: kafdrop
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: kafdrop
  selector:
    app.kubernetes.io/component: kafdrop
    app.kubernetes.io/name: kafdrop
  sessionAffinity: None
  type: ClusterIP
