apps/kafdrop/60.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  namespace: kafdrop
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    prometheus.io/port: "9113"
    spec.ingressClassName: public
spec:
  rules:
  - host: prod.k8s.home
    http:
      paths:
        - path: /kafdrop
          pathType: Prefix
          backend:
            service:
              name: kafdrop
              port:
                number: 80
